# FastapiTDD

./: .pre-commit-config.yaml  docker-compose.yml  pyproject.toml  pyvenv.cfg
store/: main.py
store/core/: config.py
store/db/: mongo.py
store/schemas/: base.py  product.py
store/usecases/: product.py
tests/: conftest.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
