[tool.poetry]
name = "tdd-project"
version = "0.0.1"
description = ""
authors = ["Lcs-ns <lucas.nas314@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
motor = "^3.6.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
